@@ -20,10 +20,10 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-import static it.polimi.demo.view.text.PrintAsync.printAsync;
+import static it.polimi.demo.view.text.StaticPrinterTUI.print;
 import static org.fusesource.jansi.Ansi.Color.*;
 import static org.fusesource.jansi.Ansi.ansi;
-import static it.polimi.demo.view.text.PrintAsync.*;
+import static it.polimi.demo.view.text.StaticPrinterTUI.*;
 
 /**
  * This class is father to both the TUI  implementation<br>
@@ -37,27 +37,27 @@ public class TUI extends UI {
      * constructor
      */
     public TUI() {
-        init();
+        initializer();
     }
 
     /**
-     * init
+     * initializer
      */
     @Override
-    public void init() {
+    public void initializer() {
         AnsiConsole.systemInstall();
-        importantEvents = new ArrayList<>();
+        relevant_facts = new ArrayList<>();
     }
 
     /**
      * @param input the string of the important event to offer
      */
     @Override
-    public void addImportantEvent(String input) {
-        if (importantEvents.size() + 1 >= Constants.maxnum_of_last_event_tobe_showed) {
-            importantEvents.remove(0);
+    public void addRelevantGameFact(String input) {
+        if (relevant_facts.size() + 1 >= Constants.maxnum_of_last_event_tobe_showed) {
+            relevant_facts.removeFirst();
         }
-        importantEvents.add(input);
+        relevant_facts.add(input);
         show_important_events();
     }
 
@@ -104,7 +104,6 @@ public class TUI extends UI {
      *
      * @param model where the game is ended
      */
-    // todo: check for correctness
     @Override
     public void show_gameEnded(ModelView model) {
         clearScreen();
@@ -135,19 +134,25 @@ public class TUI extends UI {
                 """).bg(DEFAULT).reset());
 
 
-        int i = 1;
-        int classif = 1;
-        StringBuilder ris = new StringBuilder();
+        int rowOffset = 1; // Start row offset
+        int ranking = 1;   // Start ranking
+
+        StringBuilder output = new StringBuilder();
+
         for (Map.Entry<Player, Integer> entry : model.getLeaderBoard().entrySet()) {
-            printAsync("");
-            ris.append(ansi().fg(WHITE).cursor(Constants.row_leaderboard + i, Constants.col_leaderboard)
-                    .a("#" + classif + " "
-                            + entry.getKey().getNickname() + ": "
-                            + entry.getValue() + " points\n").fg(GREEN));
-            i += 2;
-            classif++;
+            output.append(ansi()
+                    .fg(WHITE)
+                    .cursor(Constants.row_leaderboard + rowOffset, Constants.col_leaderboard)
+                    .a("#" + ranking + " " + entry.getKey().getNickname() + ": ")
+                    .fg(GREEN)
+                    .a(entry.getValue() + " points\n")
+                    .reset()); // Reset colors to default after each line
+
+            rowOffset += 2; // Increment row offset for the next entry
+            ranking++;     // Increment ranking for the next entry
         }
-        printAsync(ris);
+
+        StaticPrinterTUI.print(output.toString());
     }
 
     // *********************** SHOW METHODS  *********************** //
@@ -173,7 +178,7 @@ public class TUI extends UI {
     @Override
     public void show_objectiveCards(ModelView gameModel) {
         clearScreen();
-        printAsync("First, we show you the two objective cards you can choose from: \n");
+        StaticPrinterTUI.print("First, we show you the two objective cards you can choose from: \n");
         List<ObjectiveCard> objectiveCards = gameModel.getObjectiveCards(nickname);
         TuiCardGraphics.showObjectiveCard(objectiveCards.get(0));
         TuiCardGraphics.showObjectiveCard(objectiveCards.get(1));
@@ -210,26 +215,24 @@ public class TUI extends UI {
     @Override
     public void show_illegalMove() {
         clearScreen();
-        printAsync("Illegal move! Try again and choose different coordinates! \n");
+        StaticPrinterTUI.print("Illegal move! Try again and choose different coordinates! \n");
         clearScreen();
     }
 
     @Override
     public void show_illegalMoveBecauseOf(String message) {
         clearScreen();
-        printAsync("Illegal move! " + message + "\n");
+        StaticPrinterTUI.print("Illegal move! " + message + "\n");
         clearScreen();
     }
 
     @Override
-    protected void show_successfulMove(Coordinate coord) {
-
-    }
+    protected void show_successfulMove(Coordinate coord) {}
 
     @Override
     public void show_whereToDrawFrom() {
         clearScreen();
-        printAsync("""                       
+        StaticPrinterTUI.print("""                       
                         Select the index of the card you want to draw:\s
                          1: Resource Deck
                          2: First Resource Card on the table
@@ -254,7 +257,7 @@ public class TUI extends UI {
     @Override
     public void show_myTurnIsFinished() {
         clearScreen();
-        printAsync("Your turn is finished. Now, wait until it is again your turn! \n");
+        StaticPrinterTUI.print("Your turn is finished. Now, wait until it is again your turn! \n");
         clearScreen();
     }
 
@@ -279,9 +282,7 @@ public class TUI extends UI {
     }
 
     @Override
-    public void show_commonObjectives(ModelView gameModel) {
-
-    }
+    public void show_commonObjectives(ModelView gameModel) {}
 
     @Override
     public void show_personalObjectiveCard(ModelView gameModel) {
@@ -295,7 +296,7 @@ public class TUI extends UI {
     public void show_playerJoined(ModelView gameModel, String nick) {
         clearScreen();
         show_titleCodexNaturalis();
-        printAsync(ansi().cursor(10, 0).a("GameID: [" + gameModel.getGameId().toString() + "]\n").fg(DEFAULT));
+        StaticPrinterTUI.print(ansi().cursor(10, 0).a("GameID: [" + gameModel.getGameId().toString() + "]\n").fg(DEFAULT));
         clearScreen();
         System.out.flush();
         StringBuilder ris = new StringBuilder();
@@ -311,12 +312,12 @@ public class TUI extends UI {
             clearScreen();
             i++;
         }
-        printAsyncNoCursorReset(ris);
+        printNoNewLine(ris);
 
         clearScreen();
         for (Player p : gameModel.getPlayersConnected())
             if (!p.getReadyToStart() && p.getNickname().equals(nick))
-                printAsync(ansi().cursor(17, 0).fg(WHITE).a("> When you are ready to start, enter (y): \n"));
+                StaticPrinterTUI.print(ansi().cursor(17, 0).fg(WHITE).a("> When you are ready to start, enter (y): \n"));
         clearScreen();
         System.out.flush();
     }
@@ -329,16 +330,16 @@ public class TUI extends UI {
         clearScreen();
         StringBuilder ris = new StringBuilder();
         int i = 0;
-        int longestImportantEvent = importantEvents.stream().map(String::length).reduce(0, (a, b) -> a > b ? a : b);
+        int longestImportantEvent = relevant_facts.stream().map(String::length).reduce(0, (a, b) -> a > b ? a : b);
         ris.append(ansi().fg(GREEN).cursor(Constants.row_important_events + i, Constants.col_important_events - 1).bold().a("Latest Events: ").fg(DEFAULT).boldOff());
-        for (String s : importantEvents) {
+        for (String s : relevant_facts) {
             ris.append(ansi().fg(WHITE).cursor(Constants.row_important_events + 1 + i, Constants.col_important_events).a(s).a(" ".repeat(longestImportantEvent - s.length())).fg(DEFAULT));
             i++;
         }
-        printAsync(ris);
+        print(ris);
         clearScreen();
 
-        printAsync(ansi().cursor(Constants.row_input, 0));
+        StaticPrinterTUI.print(ansi().cursor(Constants.row_input, 0));
     }
 
 
@@ -352,15 +353,15 @@ public class TUI extends UI {
         String ris = ansi().fg(RED).cursor(11, 4).bold().a(msgToVisualize).fg(DEFAULT).boldOff() +
                 String.valueOf(ansi().fg(RED).cursor(12, 4).bold().a(" Try later or create a new game!").fg(DEFAULT).boldOff());
         ansi().fg(DEFAULT);
-        printAsyncNoCursorReset(ris);
+        printNoNewLine(ris);
     }
 
     /**
      * Clears important gameFacts' list
      */
     @Override
-    public void resetImportantEvents() {
-        this.importantEvents = new ArrayList<>();
+    public void clearRelevantGameFacts() {
+        this.relevant_facts = new ArrayList<>();
         this.nickname = null;
     }
 
@@ -370,33 +371,27 @@ public class TUI extends UI {
     @Override
     protected void show_noConnectionError() {
         this.clearScreen();
-        printAsync(ansi().fg(WHITE).bg(RED).bold().a("CONNECTION TO SERVER LOST!")
+        StaticPrinterTUI.print(ansi().fg(WHITE).bg(RED).bold().a("CONNECTION TO SERVER LOST!")
                 .boldOff().fg(DEFAULT).bgDefault());
         System.exit(-1);
     }
 
     @Override
-    protected void show_chosenNickname(String nickname) {
-
-    }
+    protected void show_chosenNickname(String nickname) {}
 
     @Override
-    protected void show_nextTurn(ModelView model, String nickname) {
-
-    }
+    protected void show_nextTurn(ModelView model, String nickname) {}
 
     @Override
-    protected void show_cardDrawn(ModelView model, String nickname) {
-
-    }
+    protected void show_cardDrawn(ModelView model, String nickname) {}
 
     /**
      * Asks the player to pick a direction
      */
     @Override
     public void show_orientation(String message) {
-        printAsync(message + "\n" + "\t> Choose card orientation (f:FRONT / b:BACK): ");
-        printAsyncNoCursorReset(ansi().cursorDownLine().a(""));
+        StaticPrinterTUI.print(message + "\n" + "\t> Choose card orientation (f:FRONT / b:BACK): ");
+        printNoNewLine(ansi().cursorDownLine().a(""));
     }
 
     /**
@@ -408,7 +403,7 @@ public class TUI extends UI {
     @Override
     public void show_messageSent(ModelView model, String nickname) {
         Message mess = model.getChat().getLastMessage();
-        printAsync(ansi().cursor(Constants.row_chat, Constants.col_chat).a(mess.sender().getNickname() + ": " + mess.text()));
+        StaticPrinterTUI.print(ansi().cursor(Constants.row_chat, Constants.col_chat).a(mess.sender().getNickname() + ": " + mess.text()));
     }
 
     /**
@@ -428,47 +423,47 @@ public class TUI extends UI {
      */
     @Override
     public void show_menu() {
-        printAsync("\nPress any key to return to the menu");
+        StaticPrinterTUI.print("\nPress any key to return to the menu");
     }
 
     @Override
     public void show_genericMessage(String msg) {
         clearScreen();
-        printAsync(Ansi.ansi().bold().fg(Ansi.Color.MAGENTA).a(msg).reset());
+        StaticPrinterTUI.print(Ansi.ansi().bold().fg(Ansi.Color.MAGENTA).a(msg).reset());
     }
 
     @Override
     public void show_genericError(String msg) {
         clearScreen();
-        printAsync(Ansi.ansi().bold().fg(Ansi.Color.RED).a("\n> Select which card from your hand you want to place (1 / 2 / 3):").reset().toString());
+        StaticPrinterTUI.print(Ansi.ansi().bold().fg(Ansi.Color.RED).a("\n> Select which card from your hand you want to place (1 / 2 / 3):").reset().toString());
     }
 
     /**
      * Asks the player to insert his nickname
      */
     @Override
-    public void show_insertNicknameMsg() {
+    public void show_insertNickname() {
         clearScreen();
-        printAsyncNoCursorReset(ansi().cursor(Constants.row_gameID, 0).a("> Insert your nickname: "));
+        printNoNewLine(ansi().cursor(Constants.row_gameID, 0).a("> Insert your nickname: "));
     }
 
     /**
      * Asks the player to choose number of tiles to pick up
      */
     @Override
-    public void show_insertNumOfPlayersMsg() {
+    public void show_insertNumOfPlayers() {
         clearScreen();
-        printAsyncNoCursorReset(ansi().cursor(Constants.row_gameID, 0).a("> Choose the number of players for this game: "));
+        printNoNewLine(ansi().cursor(Constants.row_gameID, 0).a("> Choose the number of players for this game: "));
     }
 
     /**
      * Shows initial menu
      */
     @Override
-    public void show_menuOptions() {
+    public void show_options() {
         this.clearScreen();
         this.show_titleCodexNaturalis();
-        printAsync(ansi().cursor(9, 0).a("""
+        StaticPrinterTUI.print(ansi().cursor(9, 0).a("""
                 > Select one option:
                 \tpress (c) to create a new game
                 \tpress (j) to join to a randomly an existent game
@@ -485,9 +480,9 @@ public class TUI extends UI {
      * Asks for the game id
      */
     @Override
-    public void show_inputGameIdMsg() {
+    public void show_insertGameId() {
         clearScreen();
-        printAsyncNoCursorReset("> Input the GameId: ");
+        printNoNewLine("> Input the GameId: ");
     }
 
     /**
@@ -495,22 +490,22 @@ public class TUI extends UI {
      */
     @Override
     public void show_invalidInput() {
-        printAsync("[WARNING]: invalid input");
+        StaticPrinterTUI.print("[WARNING]: invalid input");
     }
 
     /**
      * Asks which tile to place
      */
     @Override
-    public void show_whichCardToPlaceMsg() {
+    public void show_whichCardToPlace() {
         clearScreen();
-        printAsync(Ansi.ansi().bold().fg(Ansi.Color.MAGENTA).a(
+        StaticPrinterTUI.print(Ansi.ansi().bold().fg(Ansi.Color.MAGENTA).a(
                 "\n> Select which card from your hand you want to place (1 / 2 / 3):").reset().toString());
     }
 
     @Override
-    public void show_whichObjectiveToChooseMsg() {
-        printAsync("> Select which objective card you want to choose (1 / 2):");
+    public void show_whichObjectiveToChoose() {
+        StaticPrinterTUI.print("> Select which objective card you want to choose (1 / 2):");
     }
 
     /**
@@ -519,10 +514,10 @@ public class TUI extends UI {
      * @param nickname player's nickname
      */
     @Override
-    public void show_creatingNewGameMsg(String nickname) {
+    public void show_createGame(String nickname) {
         this.clearScreen();
         this.show_titleCodexNaturalis();
-        printAsync("> Creating a new game...");
+        StaticPrinterTUI.print("> Creating a new game...");
         this.nickname = nickname;
     }
 
@@ -532,10 +527,10 @@ public class TUI extends UI {
      * @param nickname player's nickname
      */
     @Override
-    public void show_joiningFirstAvailableMsg(String nickname) {
+    public void show_joinRandom(String nickname) {
         this.clearScreen();
         this.show_titleCodexNaturalis();
-        printAsync("> Connecting to the first available game...");
+        StaticPrinterTUI.print("> Connecting to the first available game...");
         this.nickname = nickname;
     }
 
@@ -546,16 +541,13 @@ public class TUI extends UI {
      * @param nickname player's nickname
      */
     @Override
-    public void show_joiningToGameIdMsg(int idGame, String nickname) {
+    public void show_join(int idGame, String nickname) {
         this.clearScreen();
         this.show_titleCodexNaturalis();
-        printAsync("> You have selected to join to Game with id: '" + idGame + "', trying to connect");
+        StaticPrinterTUI.print("> You have selected to join to Game with id: '" + idGame + "', trying to connect");
         this.nickname = nickname;
     }
 
     @Override
-    public void show_ReadyToStart(ModelView gameModel, String s) {
-
-    }
-
+    public void show_readyToStart(ModelView gameModel, String s) {}
 }
